--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
     compile 'com.android.support:design:23.4.0'
+    compile 'org.litepal.android:core:1.5.0'
     testCompile 'junit:junit:4.12'
 }
